syntax = "proto3";
package pb;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.marshaler_all) = true;

message UserRequest {
    string username=1;
    string password=2;
}

message UserResponse {
    string access_token=1;
}

message GetUserRequest {
    string username=1;
}

message GetUserResponse {
    int64 user_id=1;
}